# ai-prims

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/aiprims/: __init__.py
src/aiprims/core/: __init__.py
src/aiprims/core/hash/: __init__.py  _canonical.py  _errors.py  _hasher.py  _validators.py
src/aiprims/rag/: __init__.py
tests/: test_core_hash.py  test_import.py
