[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiprims"
version = "0.0.1"
description = "Foundational execution primitives for AI, ML, and data systems"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Sai Harsha Kondaveeti", email = "hello@saiharshakondaveeti.com" }
]
keywords = [
  "ai", "ml", "primitives", "reproducibility", "hashing",
  "execution identity", "llm", "rag", "agents", "data", "utils"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/saiharsha-k/ai-prims"
Repository = "https://github.com/saiharsha-k/ai-prims"
Issues = "https://github.com/saiharsha-k/ai-prims/issues"